--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -6,95 +6,336 @@
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameScene.cpp" />
-    <ClCompile Include="Player\Player.cpp" />
-    <ClCompile Include="Player\PlayerStatus\PlayerHp.cpp" />
-    <ClCompile Include="Enemy\EnemyGenerator.cpp" />
-    <ClCompile Include="Enemy\IEnemy.cpp" />
-    <ClCompile Include="Player\PlayerStatus\PlayerStamina.cpp" />
-    <ClCompile Include="Player\PlayerStatus\SpriteInitFunction.cpp" />
-    <ClCompile Include="Player\PlayerStatus\PlayerHunger.cpp" />
-    <ClCompile Include="Player\PlayerStatus\PlayerWater.cpp" />
     <ClCompile Include="DateTime.cpp" />
-    <ClCompile Include="DestructibleObject\Terrain\Terrain.cpp" />
-    <ClCompile Include="DestructibleObject\Block\Block.cpp" />
-    <ClCompile Include="DestructibleObject\DestructibleObject.cpp" />
-    <ClCompile Include="Stage\SuperFlat\SuperFlat.cpp" />
-    <ClCompile Include="Stage\IStage.cpp" />
-    <ClCompile Include="Scene\TerrainDebugScene.cpp" />
-    <ClCompile Include="TerrainManager\TerrainManager.cpp" />
-    <ClCompile Include="TerrainManager\TerrainRender\TerrainRender.cpp" />
-    <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp" />
-    <ClCompile Include="TerrainManager\TerrainWorld.cpp" />
-    <ClCompile Include="Enemy\StandardZombie\StandardZombie.cpp" />
-    <ClCompile Include="Enemy\IEnemyState.cpp" />
-    <ClCompile Include="PlacementObject\PlacementObject.cpp" />
-    <ClCompile Include="Stage\Hill\Hill.cpp" />
-    <ClCompile Include="Enemy\StandardZombie\STDZombieAttack.cpp" />
-    <ClCompile Include="Enemy\StandardZombie\STDZombieTracking.cpp" />
-    <ClCompile Include="Enemy\StandardZombie\STDZombieWandering.cpp" />
-    <ClCompile Include="Navigation\NVMDebugDraw.cpp" />
-    <ClCompile Include="Navigation\NVMGenerator.cpp" />
-    <ClCompile Include="Navigation\AStar.cpp" />
-    <ClCompile Include="Navigation\NavigationAgent.cpp" />
-    <ClCompile Include="DestroyObject\DestroyObject.cpp" />
-    <ClCompile Include="Tool\Tool.cpp" />
-    <ClCompile Include="Save\TerrainSave\TerrainSave.cpp" />
-    <ClCompile Include="BlockManager\BlockManager.cpp" />
-    <ClCompile Include="Load\TerrainLoad\LoadingByChunk.cpp" />
-    <ClCompile Include="Load\TerrainLoad\TerrainLoad.cpp" />
-    <ClCompile Include="GameConfig\WorldConfig\WorldConfig.cpp" />
+    <ClCompile Include="BlockManager\BlockManager.cpp">
+      <Filter>BlockManager</Filter>
+    </ClCompile>
+    <ClCompile Include="DestroyObject\DestroyObject.cpp">
+      <Filter>DestroyObject</Filter>
+    </ClCompile>
+    <ClCompile Include="DestructibleObject\DestructibleObject.cpp">
+      <Filter>DestructibleObject</Filter>
+    </ClCompile>
+    <ClCompile Include="DestructibleObject\Block\Block.cpp">
+      <Filter>DestructibleObject\Block</Filter>
+    </ClCompile>
+    <ClCompile Include="DestructibleObject\Terrain\Terrain.cpp">
+      <Filter>DestructibleObject\Terrain</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\EnemyGenerator.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\IEnemyState.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\IEnemy.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\StandardZombie\StandardZombie.cpp">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\StandardZombie\STDZombieAttack.cpp">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\StandardZombie\STDZombieTracking.cpp">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\StandardZombie\STDZombieWandering.cpp">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClCompile>
+    <ClCompile Include="GameConfig\WorldConfig\WorldConfig.cpp">
+      <Filter>GameConfig\WorldConfig</Filter>
+    </ClCompile>
+    <ClCompile Include="Load\TerrainLoad\TerrainLoad.cpp">
+      <Filter>Load\TerrainLoad</Filter>
+    </ClCompile>
+    <ClCompile Include="Load\TerrainLoad\LoadingByChunk.cpp">
+      <Filter>Load\TerrainLoad</Filter>
+    </ClCompile>
+    <ClCompile Include="Navigation\AStar.cpp">
+      <Filter>Navigation</Filter>
+    </ClCompile>
+    <ClCompile Include="Navigation\NavigationAgent.cpp">
+      <Filter>Navigation</Filter>
+    </ClCompile>
+    <ClCompile Include="Navigation\NVMDebugDraw.cpp">
+      <Filter>Navigation</Filter>
+    </ClCompile>
+    <ClCompile Include="Navigation\NVMGenerator.cpp">
+      <Filter>Navigation</Filter>
+    </ClCompile>
+    <ClCompile Include="PlacementObject\PlacementObject.cpp">
+      <Filter>PlacementObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\Player.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\PlayerStatus\PlayerHp.cpp">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\PlayerStatus\PlayerHunger.cpp">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\PlayerStatus\PlayerStamina.cpp">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\PlayerStatus\PlayerWater.cpp">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\PlayerStatus\SpriteInitFunction.cpp">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClCompile>
+    <ClCompile Include="Save\TerrainSave\TerrainSave.cpp">
+      <Filter>Save\TerrainSave</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\TerrainDebugScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Stage\IStage.cpp">
+      <Filter>Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="Stage\Hill\Hill.cpp">
+      <Filter>Stage\Hill</Filter>
+    </ClCompile>
+    <ClCompile Include="Stage\SuperFlat\SuperFlat.cpp">
+      <Filter>Stage\SuperFlat</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainManager\TerrainWorld.cpp">
+      <Filter>TerrainManager</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainManager\TerrainManager.cpp">
+      <Filter>TerrainManager</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp">
+      <Filter>TerrainManager\TerrainRender</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainManager\TerrainRender\TerrainRender.cpp">
+      <Filter>TerrainManager\TerrainRender</Filter>
+    </ClCompile>
+    <ClCompile Include="Tool\Tool.cpp">
+      <Filter>Tool</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
     <ClInclude Include="GameCamera.h" />
-    <ClInclude Include="Player\Player.h" />
-    <ClInclude Include="Player\PlayerStatus\PlayerHp.h" />
-    <ClInclude Include="Enemy\EnemyGenerator.h" />
-    <ClInclude Include="Enemy\IEnemy.h" />
-    <ClInclude Include="Player\PlayerStatus\PlayerStamina.h" />
-    <ClInclude Include="Player\PlayerStatus\SpriteInitFunction.h" />
-    <ClInclude Include="Player\PlayerStatus\PlayerHunger.h" />
-    <ClInclude Include="Player\PlayerStatus\PlayerWater.h" />
     <ClInclude Include="DateTime.h" />
-    <ClInclude Include="DestructibleObject\Terrain\Terrain.h" />
-    <ClInclude Include="DestructibleObject\Block\Block.h" />
-    <ClInclude Include="DestructibleObject\DestructibleObject.h" />
-    <ClInclude Include="Stage\SuperFlat\SuperFlat.h" />
-    <ClInclude Include="Stage\IStage.h" />
-    <ClInclude Include="Scene\TerrainDebugScene.h" />
-    <ClInclude Include="TerrainManager\TerrainManager.h" />
-    <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
-    <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h" />
-    <ClInclude Include="TerrainManager\TerrainWorld.h" />
-    <ClInclude Include="TerrainManager\MarchingCubeTable.h" />
-    <ClInclude Include="Enemy\StandardZombie\StandardZombie.h" />
     <ClInclude Include="GameScene.h" />
-    <ClInclude Include="Enemy\IEnemyState.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="PlacementObject\PlacementObject.h" />
-    <ClInclude Include="Stage\Hill\Hill.h" />
-    <ClInclude Include="Enemy\StandardZombie\STDZombieAttack.h" />
-    <ClInclude Include="Enemy\StandardZombie\STDZombieTracking.h" />
-    <ClInclude Include="Enemy\StandardZombie\STDZombieWandering.h" />
-    <ClInclude Include="Navigation\NVMDebugDraw.h" />
-    <ClInclude Include="Navigation\NVMGenerator.h" />
-    <ClInclude Include="Navigation\AStar.h" />
-    <ClInclude Include="Navigation\NavigationAgent.h" />
-    <ClInclude Include="DestroyObject\DestroyObject.h" />
-    <ClInclude Include="Tool\Tool.h" />
-    <ClInclude Include="Save\TerrainSave\TerrainSave.h" />
-    <ClInclude Include="BlockManager\BlockManager.h" />
-    <ClInclude Include="Load\TerrainLoad\LoadingByChunk.h" />
     <ClInclude Include="SaveDataFile.h" />
-    <ClInclude Include="Load\TerrainLoad\TerrainLoad.h" />
-    <ClInclude Include="GameConfig\WorldConfig\WorldConfig.h" />
+    <ClInclude Include="BlockManager\BlockManager.h">
+      <Filter>BlockManager</Filter>
+    </ClInclude>
+    <ClInclude Include="DestroyObject\DestroyObject.h">
+      <Filter>DestroyObject</Filter>
+    </ClInclude>
+    <ClInclude Include="DestructibleObject\DestructibleObject.h">
+      <Filter>DestructibleObject</Filter>
+    </ClInclude>
+    <ClInclude Include="DestructibleObject\Block\Block.h">
+      <Filter>DestructibleObject\Block</Filter>
+    </ClInclude>
+    <ClInclude Include="DestructibleObject\Terrain\Terrain.h">
+      <Filter>DestructibleObject\Terrain</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\EnemyGenerator.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\IEnemyState.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\IEnemy.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\StandardZombie\StandardZombie.h">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\StandardZombie\STDZombieAttack.h">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\StandardZombie\STDZombieTracking.h">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\StandardZombie\STDZombieWandering.h">
+      <Filter>Enemy\StandardZombie</Filter>
+    </ClInclude>
+    <ClInclude Include="GameConfig\WorldConfig\WorldConfig.h">
+      <Filter>GameConfig\WorldConfig</Filter>
+    </ClInclude>
+    <ClInclude Include="Load\TerrainLoad\TerrainLoad.h">
+      <Filter>Load\TerrainLoad</Filter>
+    </ClInclude>
+    <ClInclude Include="Load\TerrainLoad\LoadingByChunk.h">
+      <Filter>Load\TerrainLoad</Filter>
+    </ClInclude>
+    <ClInclude Include="Navigation\AStar.h">
+      <Filter>Navigation</Filter>
+    </ClInclude>
+    <ClInclude Include="Navigation\NavigationAgent.h">
+      <Filter>Navigation</Filter>
+    </ClInclude>
+    <ClInclude Include="Navigation\NVMDebugDraw.h">
+      <Filter>Navigation</Filter>
+    </ClInclude>
+    <ClInclude Include="Navigation\NVMGenerator.h">
+      <Filter>Navigation</Filter>
+    </ClInclude>
+    <ClInclude Include="PlacementObject\PlacementObject.h">
+      <Filter>PlacementObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\Player.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\PlayerStatus\PlayerHp.h">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\PlayerStatus\PlayerHunger.h">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\PlayerStatus\PlayerStamina.h">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\PlayerStatus\PlayerWater.h">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\PlayerStatus\SpriteInitFunction.h">
+      <Filter>Player\PlayerStatus</Filter>
+    </ClInclude>
+    <ClInclude Include="Save\TerrainSave\TerrainSave.h">
+      <Filter>Save\TerrainSave</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\TerrainDebugScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage\IStage.h">
+      <Filter>Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage\Hill\Hill.h">
+      <Filter>Stage\Hill</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage\SuperFlat\SuperFlat.h">
+      <Filter>Stage\SuperFlat</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainManager\TerrainWorld.h">
+      <Filter>TerrainManager</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainManager\TerrainManager.h">
+      <Filter>TerrainManager</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h">
+      <Filter>TerrainManager\TerrainRender</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h">
+      <Filter>TerrainManager\TerrainRender</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainManager\MarchingCubeTable.h">
+      <Filter>TerrainManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Tool\Tool.h">
+      <Filter>Tool</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ImageContentTask Include="Assets\sprite\HPGauge.png" />
-    <ImageContentTask Include="Assets\sprite\HPIcon.png" />
-    <ImageContentTask Include="Assets\sprite\shoesIcon.png" />
-    <ImageContentTask Include="Assets\sprite\staminaGauge.png" />
-    <ImageContentTask Include="Assets\sprite\statusGauge.png" />
-    <ImageContentTask Include="Assets\sprite\preset\fade.png" />
+    <ImageContentTask Include="Assets\sprite\shoesIcon.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\staminaGauge.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\statusGauge.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\HPIcon.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\HPGauge.png">
+      <Filter>Assets\sprite</Filter>
+    </ImageContentTask>
+    <ImageContentTask Include="Assets\sprite\preset\fade.png">
+      <Filter>Assets\sprite\preset</Filter>
+    </ImageContentTask>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Assets">
+      <UniqueIdentifier>{679b2094-8f38-44ed-b11f-2f3d538f6ef1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Assets\sprite">
+      <UniqueIdentifier>{914966c0-db68-4d8c-8d7e-cb65f46befa4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Assets\sprite\preset">
+      <UniqueIdentifier>{06d2a67d-92f7-4b08-827a-432c2eed31e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="BlockManager">
+      <UniqueIdentifier>{72e7b84c-03e0-4811-a0bc-1bb8c69cc7dd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DestroyObject">
+      <UniqueIdentifier>{5d88fa7e-0f77-4379-afa3-319c70212ab9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DestructibleObject">
+      <UniqueIdentifier>{fdcca65c-7aa5-4c02-ba9d-fe48ac510ade}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DestructibleObject\Block">
+      <UniqueIdentifier>{b057200a-198d-4449-a940-1fbd0814cb26}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DestructibleObject\Terrain">
+      <UniqueIdentifier>{60297234-866d-4afb-a602-7bf986e40d0a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Enemy">
+      <UniqueIdentifier>{cc09563f-0465-4d7a-9cc4-d598b6df28e0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Enemy\StandardZombie">
+      <UniqueIdentifier>{0dcda043-090e-4934-b333-9516470ccf8b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameConfig">
+      <UniqueIdentifier>{c643aefa-1f22-4e8e-8a80-765c89cec2ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameConfig\WorldConfig">
+      <UniqueIdentifier>{5aef1331-e727-4474-9918-6130ef3ad0dc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Load">
+      <UniqueIdentifier>{e15ba642-283c-425c-a073-8817cdbedd8c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Load\TerrainLoad">
+      <UniqueIdentifier>{8f94a1c0-fc78-4027-97ed-b7ed5dc65bda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Navigation">
+      <UniqueIdentifier>{1b5059de-c4cf-48da-98ac-e9fdc57eda2d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PlacementObject">
+      <UniqueIdentifier>{e8cc2496-458a-4a60-9941-878c21b228f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Player">
+      <UniqueIdentifier>{3ea08672-82e3-4b22-ab06-80897e956890}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Player\PlayerStatus">
+      <UniqueIdentifier>{78263db8-7c5d-498e-8381-e86b1aa11fd7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Save">
+      <UniqueIdentifier>{da7afdc0-b4f5-4886-b6db-69dfb8c1ba73}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Save\TerrainSave">
+      <UniqueIdentifier>{0bf04305-8c95-4d7e-aa21-4dcfd25d99bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{b4d778ca-94d4-4fd9-ae14-786927d8ce4f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stage">
+      <UniqueIdentifier>{29bc9b81-a532-4159-8b1b-4902282a103a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stage\Hill">
+      <UniqueIdentifier>{e67533ec-33c3-49a1-b31b-cda5fb8a7d59}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stage\SuperFlat">
+      <UniqueIdentifier>{4937acf3-9fe1-455d-9375-5f6da25c886b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TerrainManager">
+      <UniqueIdentifier>{01649466-ef51-4f85-82cb-0f3293d240ec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TerrainManager\TerrainRender">
+      <UniqueIdentifier>{9b7cb174-399a-4e1d-82c4-02153ea5672c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Tool">
+      <UniqueIdentifier>{744cd739-ee3f-4b2f-bf21-029cbfa75127}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
