--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveItemDataList.cs" />
     <Compile Include="ToolData.cs" />
     <Compile Include="ToolDataCommand.cs" />
     <Compile Include="ToolKindsComboBox.cs" />
