--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -47,20 +47,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditorCommandList.cs" />
+    <Compile Include="ToolEditor\Command\EditorCommandList.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ICommand.cs" />
+    <Compile Include="ToolEditor\Command\ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveItemDataList.cs" />
-    <Compile Include="ToolData.cs" />
-    <Compile Include="ToolDataCommand.cs" />
-    <Compile Include="ToolKindsComboBox.cs" />
+    <Compile Include="ToolEditor\File\SaveItemDataList.cs" />
+    <Compile Include="ToolEditor\ToolData.cs" />
+    <Compile Include="ToolEditor\Command\ToolDataCommand.cs" />
+    <Compile Include="ToolEditor\ToolKindsComboBox.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
