jsonファイルを読み込んで編集できるようになった。

--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ToolEditor\Command\ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolEditor\File\LoadItemDataList.cs" />
     <Compile Include="ToolEditor\File\SaveItemDataList.cs" />
     <Compile Include="ToolEditor\ToolData.cs" />
     <Compile Include="ToolEditor\Command\ToolDataCommand.cs" />
