--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Block\BlockManager\BlockManager.cpp" />
+    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
     <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
     <ClCompile Include="Load\TerrainLoad\LoadingByChunk.cpp" />
@@ -209,6 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block\BlockManager\BlockManager.h" />
+    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
     <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
     <ClInclude Include="Load\TerrainLoad\LoadingByChunk.h" />
