フィルター整理。

--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -115,11 +115,15 @@
     <ClCompile Include="Tool\Tool.cpp">
       <Filter>Tool</Filter>
     </ClCompile>
-    <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
     <ClCompile Include="Tool\ToolDataFile.cpp">
       <Filter>Tool</Filter>
     </ClCompile>
-    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
+    <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp">
+      <Filter>Load\ChunkCollision</Filter>
+    </ClCompile>
+    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp">
+      <Filter>Load\ChunkBlock</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -239,7 +243,6 @@
     <ClInclude Include="Tool\Tool.h">
       <Filter>Tool</Filter>
     </ClInclude>
-    <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
     <ClInclude Include="Tool\ToolDataFile.h">
       <Filter>Tool</Filter>
     </ClInclude>
@@ -366,7 +369,12 @@
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley_undef.hpp">
       <Filter>nlohmann\thirdparty\hedley</Filter>
     </ClInclude>
-    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
+    <ClInclude Include="Load\ChunkCollision\ChunkCollision.h">
+      <Filter>Load\ChunkCollision</Filter>
+    </ClInclude>
+    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h">
+      <Filter>Load\ChunkBlock</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\shoesIcon.png">
@@ -499,6 +507,12 @@
     </Filter>
     <Filter Include="nlohmann\thirdparty\hedley">
       <UniqueIdentifier>{366bc28c-681a-43b1-9009-3f8cc62ed50e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Load\ChunkBlock">
+      <UniqueIdentifier>{ad9cbf15-d0a0-4924-b035-d344c8838e0d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Load\ChunkCollision">
+      <UniqueIdentifier>{81336fc7-1669-4fbf-a70a-4e886c781cf5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
