--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Block\BlockManager\BlockManager.cpp" />
+    <ClCompile Include="ItemBar.cpp" />
     <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
     <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
@@ -210,6 +211,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block\BlockManager\BlockManager.h" />
+    <ClInclude Include="ItemBar.h" />
     <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
     <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
@@ -306,6 +308,11 @@
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\preset\fade.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\sprite\HotBar.png" />
+    <Image Include="Assets\sprite\HPGauge.dds" />
+    <Image Include="Assets\sprite\SelectBar.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
