--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -161,7 +161,8 @@
   <ItemGroup>
     <ClCompile Include="Block\BlockManager\BlockManager.cpp" />
     <ClCompile Include="ItemBar.cpp" />
-     <ClCompile Include="Item\IGameItem.cpp" />    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
+    <ClCompile Include="Item\IGameItem.cpp" />
+    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
     <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
     <ClCompile Include="Load\TerrainLoad\LoadingByChunk.cpp" />
@@ -211,9 +212,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block\BlockManager\BlockManager.h" />
-
     <ClInclude Include="ItemBar.h" />
-    <ClInclude Include="Item\IGameItem.h" />    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
+    <ClInclude Include="Item\IGameItem.h" />
+    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
     <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
     <ClInclude Include="Load\TerrainLoad\LoadingByChunk.h" />
@@ -311,9 +312,8 @@
     <ImageContentTask Include="Assets\sprite\preset\fade.png" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Assets\sprite\HotBar.png" />
-    <Image Include="Assets\sprite\HPGauge.dds" />
-    <Image Include="Assets\sprite\SelectBar.png" />
+    <ImageContentTask Include="Assets\sprite\HotBar.png" />
+    <ImageContentTask Include="Assets\sprite\SelectBar.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
