--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -161,7 +161,9 @@
   <ItemGroup>
     <ClCompile Include="Block\BlockManager\BlockManager.cpp" />
     <ClCompile Include="ItemBar.cpp" />
-     <ClCompile Include="Item\IGameItem.cpp" />    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
+    <ClCompile Include="Item\GameItemTool.cpp" />
+    <ClCompile Include="Item\IGameItem.cpp" />
+    <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
     <ClCompile Include="Load\ChunkCollision\ChunkCollision.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
     <ClCompile Include="Load\TerrainLoad\LoadingByChunk.cpp" />
@@ -211,9 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block\BlockManager\BlockManager.h" />
-
     <ClInclude Include="ItemBar.h" />
-    <ClInclude Include="Item\IGameItem.h" />    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
+    <ClInclude Include="Item\GameItemTool.h" />
+    <ClInclude Include="Item\IGameItem.h" />
+    <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
     <ClInclude Include="Load\ChunkCollision\ChunkCollision.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
     <ClInclude Include="Load\TerrainLoad\LoadingByChunk.h" />
